--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -9,7 +9,7 @@
 
     <div class="col-lg-1"></div>
     <div class="col-lg-11">
-        <table class="table">
+        <table class="table table-striped">
             <tbody>
                 <tr *ngFor="let Education of education">
                     <td>
