--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,10 +3,10 @@
 }
 
 footer {
-    color: #fefefe;
-    font-size: 14px;
+    color: gainsboro;
+    font-size: 20px;
     display: flex;
     flex-direction: column;
     text-align: center;
-    box-shadow: 2px -2px 5px paleturquoise ;
+    box-shadow: 2px 2px 5px paleturquoise ;
 }
