--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <footer class="footer">
-        <p>Fernando Moreno | Argentina Programa 2023</p>
-        <p>Buenos Aires, Argentina</p>
+        <p class="fw-bold">Fernando Moreno | Argentina Programa</p>
+        <p class="fw-bold">San Nicolás de los Arroyos, Buenos Aires, Argentina</p>
     </footer>
 </div>
