--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,23 +1,23 @@
 .row {
-    padding: 20px;
+    padding: 10px;
 }
 
 div {
     background-color: #a1b5cb;
 }
 
-/* show name */
-#name {
-    font-weight: bold;
-    margin-top: 30%;
-    margin-left: 10px;
-}
+
 
 /* profile image */
 @media (min-width: 576px) {
     #profile-photo {
         border-radius: 100%;
         box-shadow: 3px 3px 3px gray;
+    }
+
+    .name {
+        text-align: center;
+        justify-content: center;
     }
 
     .about {
@@ -34,5 +34,10 @@ div {
         box-shadow: 3px 3px 3px gray;
         left: 33%;
         top: 950px;
+    }
+
+    .name {
+        text-align: center;
+        justify-content: center;
     }
 }
