--- a/src/app/about/edit-about/edit-about.component.html
+++ b/src/app/about/edit-about/edit-about.component.html
@@ -15,12 +15,14 @@
                     <input type="text" class="form-control" id="description" name="description" [(ngModel)]="person.description" required>
                 </div>
                 <div class="form-group">
-                    <label for="img">Descripcion de sus estudios</label>
+                    <label for="img">Foto de perfil</label>
                     <input type="file" class="form-control" id="img" name="img" [(ngModel)]="person.img" (change)="uploadImg($event)" accept=".jpg, .jpeg, .png">
                 </div>
+                <br>
                 <div class="img">
                     <img [src]="imageService.url" width="200px">
                 </div>
+                <br>
                 <button class="btn btn-primary">
                     Editar
                 </button>
