--- a/src/app/experience/new-experience/new-experience.component.html
+++ b/src/app/experience/new-experience/new-experience.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <br>
     <div class="row">
         <div>
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
@@ -10,8 +11,9 @@
                     <label for="descripcionE">Descripcion de la tarea</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                 </div>
+                <br>
                 <button class="btn btn-primary">
-                    Agregar experiencia
+                    Agregar
                 </button>
             </form>
         </div>
