--- a/src/app/logo-ap/logo-ap.component.html
+++ b/src/app/logo-ap/logo-ap.component.html
@@ -4,11 +4,36 @@
             <img src="../../assets/APLogo.png" id="logoAP">
         </div>
         <div class="social-networks">
-            <a href=""><img src="../../assets/linkedin.png" alt="linkedIn"></a>
-            <a href=""><img src="../../assets/facebook.png" alt="facebook"></a>
-            <a href=""><img src="../../assets/github.png" alt="GitHub"></a>
-            <a href=""><img src="../../assets/instagram.png" alt="Instagram"></a>
-            <a href=""><img src="../../assets/twitter.png" alt="twitter"></a>          
+            <td *ngIf="isLogged">
+                <button class="btn btn-light" routerLink="/socialnetwork/1">
+                    <i class="bi bi-pencil-fill"></i></button>
+            </td>
+            <a [href]="linkedIn" target="_blank"><img src="../../assets/linkedin.png" alt="linkedIn"></a>
+
+            <td *ngIf="isLogged">
+                <button class="btn btn-light" routerLink="/socialnetwork/2">
+                    <i class="bi bi-pencil-fill"></i></button>
+            </td>
+            <a [href]="facebook" target="_blank"><img src="../../assets/facebook.png" alt="facebook"></a>
+
+            <td *ngIf="isLogged">
+                <button class="btn btn-light" routerLink="/socialnetwork/3">
+                    <i class="bi bi-pencil-fill"></i></button>
+            </td>
+            <a [href]="github" target="_blank"><img src="../../assets/github.png" alt="GitHub"></a>
+
+            <td *ngIf="isLogged">
+                <button class="btn btn-light" routerLink="/socialnetwork/4">
+                    <i class="bi bi-pencil-fill"></i></button>
+            </td>
+            <a [href]="instagram" target="_blank"><img src="../../assets/instagram.png" alt="Instagram"></a>
+
+            <td *ngIf="isLogged">
+                <button class="btn btn-light" routerLink="/socialnetwork/5">
+                    <i class="bi bi-pencil-fill"></i></button>
+            </td>
+            <a [href]="twitter" target="_blank"><img src="../../assets/twitter.png" alt="twitter"></a>
+
             <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">Ingresar</button>
             <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">Cerrar Sesion</button>  
         </div>
