--- a/src/app/project/new-project/new-project.component.html
+++ b/src/app/project/new-project/new-project.component.html
@@ -1,1 +1,32 @@
-<p>new-project works!</p>
+<div class="container">
+    <div class="row">
+        <div>
+            <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
+                <div class="form-group">
+                    <label for="title">Titulo del proyecto</label>
+                    <input type="text" class="form-control" id="title" name="title" [(ngModel)]="title" required>
+                </div>
+                <div class="form-group">
+                    <label for="description">Descripcion</label>
+                    <input type="text" class="form-control" id="description" name="description" [(ngModel)]="description" required>
+                </div>
+                <div class="form-group">
+                    <label for="link">Link del proyecto</label>
+                    <input type="text" class="form-control" id="link" name="link" [(ngModel)]="link" required>
+                </div>
+                <div class="form-group">
+                    <label for="img">Imagen</label>
+                    <input type="file" class="form-control" id="img" name="img" (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
+                </div>
+                <br>
+                <div class="img">
+                    <img [src]="imageService.urlp" width="200px">
+                </div>
+                <br>
+                <button class="btn btn-primary">
+                    Agregar
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
