--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,9 +3,8 @@
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <figure class="figure">
             <img id="profile-photo" src="{{person.img}}" class="figure-img img-fluid rounded" alt="Foto Perfil">            
-            <button type="button" class="btn btn-primary" routerLink="/editabout/1" *ngIf="isLogged">
-                <i class="bi bi-pencil-fill"></i>Editar
-            </button>
+            <button type="button" class="btn btn-light" routerLink="/editabout/1" *ngIf="isLogged">
+                <i class="bi bi-pencil-fill"></i></button>
         </figure>
     </div>
 
@@ -15,8 +14,8 @@
 
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
         <span>
-            <h1>Acerca de mi</h1>
-            <p>{{person.description}}</p>
+            <h1 class="name">Acerca de mi</h1>
+            <p class="name sub-text">{{person.description}}</p>
         </span>
         
     </div>
