--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,3 +1,3 @@
 <div>
-    <img id="img" src="../../assets/bannerr.jpg" alt="Banner">
+    <img id="img" class="img-fluid" src="../../assets/banner.png" alt="Banner">
 </div>
